--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
-    "@tailwindcss/vite": "^4.0.4"
+    "@tailwindcss/vite": "^4.0.4",
+    "axios": "^1.7.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
